XNAT-8214: OpenRewrite