@@ -101,18 +101,18 @@ public class SessionXMLRebuilder extends AbstractXnatTask {
                                 log.info("Update #{}: prearchive session {} is {} minutes old, greater than configured interval {}, creating JMS queue entry for {} to archive {}", updatedSessionCount, sessionData, diff, _interval, user.getUsername(), sessionData.getExternalUrl());
                                 PrearcUtils.queuePrearchiveOperation(new PrearchiveOperationRequest(user, Rebuild, sessionData, sessionDir));
                             } else if (diff >= (_interval * 10)) {
-                                log.error(String.format("Prearchive session locked for an abnormally large time within CACHE_DIR/prearc_locks/%1$s/%2$s/%3$s", sessionData.getProject(), sessionData.getTimestamp(), sessionData.getName()));
+                                log.error("Prearchive session locked for an abnormally large time within CACHE_DIR/prearc_locks/%1$s/%2$s/%3$s".formatted(sessionData.getProject(), sessionData.getTimestamp(), sessionData.getName()));
                             } else if (diff < _interval) {
                                 log.debug("Prearchive session {} is {} minutes old, less than configured interval {}, remaining in RECEIVING status", sessionData, diff, _interval);
                             }
                         } catch (IOException e) {
-                            final String message = String.format("An error occurred trying to write the session %s %s %s.", sessionData.getFolderName(), sessionData.getTimestamp(), sessionData.getProject());
+                            final String message = "An error occurred trying to write the session %s %s %s.".formatted(sessionData.getFolderName(), sessionData.getTimestamp(), sessionData.getProject());
                             log.error(message, e);
                         } catch (InvalidPermissionException e) {
-                            final String message = String.format("A permissions error occurred trying to write the session %s %s %s.", sessionData.getFolderName(), sessionData.getTimestamp(), sessionData.getProject());
+                            final String message = "A permissions error occurred trying to write the session %s %s %s.".formatted(sessionData.getFolderName(), sessionData.getTimestamp(), sessionData.getProject());
                             log.error(message, e);
                         } catch (Exception e) {
-                            final String message = String.format("An unknown error occurred trying to write the session %s %s %s.", sessionData.getFolderName(), sessionData.getTimestamp(), sessionData.getProject());
+                            final String message = "An unknown error occurred trying to write the session %s %s %s.".formatted(sessionData.getFolderName(), sessionData.getTimestamp(), sessionData.getProject());
                             log.error(message, e);
                         }
                     }
