@@ -11,7 +11,7 @@ import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.Matchers;
+import org.mockito.ArgumentMatchers;
 import org.mockito.Mockito;
 import org.nrg.framework.services.ContextService;
 import org.nrg.framework.utilities.BasicXnatResourceLocator;
@@ -224,7 +224,7 @@ public class EventServiceIntegrationTest {
         when(mockEventServiceLoggingAction.getName()).thenReturn("org.nrg.xnat.eventservice.actions.EventServiceLoggingAction");
         when(mockEventServiceLoggingAction.getDisplayName()).thenReturn("MockEventServiceLoggingAction");
         when(mockEventServiceLoggingAction.getDescription()).thenReturn("MockEventServiceLoggingAction");
-        when(mockEventServiceLoggingAction.getActions(Matchers.any(String.class), Matchers.any(List.class), Matchers.any(UserI.class))).thenReturn(null);
+        when(mockEventServiceLoggingAction.getActions(ArgumentMatchers.any(String.class), ArgumentMatchers.any(List.class), ArgumentMatchers.any(UserI.class))).thenReturn(null);
 
         // Mock prefs bean
         when(mockEventServicePrefsBean.getEnabled()).thenReturn(true);
@@ -310,10 +310,10 @@ public class EventServiceIntegrationTest {
         assertThat("componentManager.getInstalledListeners() should not return a null list", listeners, notNullValue());
         assertThat("componentManager.getInstalledListeners() should not return an empty list", listeners, is(not(empty())));
 
-        String eventId      = events.get(0).id();
-        String actionId     = actions.get(0).id();
-        String actionKey    = actions.get(0).actionKey();
-        String listenerType = listeners.get(0).getClass().getCanonicalName();
+        String eventId      = events.getFirst().id();
+        String actionId     = actions.getFirst().id();
+        String actionKey    = actions.getFirst().actionKey();
+        String listenerType = listeners.getFirst().getClass().getCanonicalName();
 
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder().name("Test Subscription")
                                                                      .active(true)
@@ -596,7 +596,7 @@ public class EventServiceIntegrationTest {
     @DirtiesContext
     public void catchSubscribedEvent() throws Exception {
         EventServiceEvent event         = new SampleEvent();
-        String            testActionKey = testAction.getAllActions().get(0).actionKey();
+        String            testActionKey = testAction.getAllActions().getFirst().actionKey();
 
         eventService.getAllActions();
         EventFilterCreator filterCreator = EventFilterCreator.builder().eventType(event.getType()).build();
@@ -632,9 +632,9 @@ public class EventServiceIntegrationTest {
         assertThat("subscriptionDeliveries table is null. Expected one entry.", subscriptionDeliveries, notNullValue());
         assertThat("subscriptionDeliveries table is empty. Expected one entry.", subscriptionDeliveries.size(), is(1));
 
-        List<TimedEventStatus> eventStatuses = subscriptionDeliveries.get(0).timedEventStatuses();
+        List<TimedEventStatus> eventStatuses = subscriptionDeliveries.getFirst().timedEventStatuses();
         assertThat("TimedEventStatus table is null. Expected entries.", eventStatuses, notNullValue());
-        assertThat("", eventStatuses.get(eventStatuses.size() - 1).status(), is("ACTION_COMPLETE"));
+        assertThat("", eventStatuses.getLast().status(), is("ACTION_COMPLETE"));
     }
 
     @Test
@@ -842,14 +842,14 @@ public class EventServiceIntegrationTest {
         List<Subscription> allSubscriptions1 = eventSubscriptionEntityService.getAllSubscriptions();
         assertThat("Expected one subscription to be created.", allSubscriptions1.size(), is(1));
 
-        final Subscription subscription1 = allSubscriptions1.get(0);
+        final Subscription subscription1 = allSubscriptions1.getFirst();
         String             regKey1       = eventSubscriptionEntityService.getListenerId(subscription1.id()).toString();
 
         eventService.reactivateAllSubscriptions();
 
         List<Subscription> allSubscriptions2 = eventSubscriptionEntityService.getAllSubscriptions();
         assertThat("Expected only a single subscription after reactivation", allSubscriptions2.size(), is(1));
-        final Subscription subscription2 = allSubscriptions2.get(0);
+        final Subscription subscription2 = allSubscriptions2.getFirst();
         String             regKey2       = eventSubscriptionEntityService.getListenerId(subscription2.id()).toString();
 
         assertThat("Expected reactivated subscription to have unique registration key.", regKey1, is(not(regKey2)));
@@ -897,7 +897,7 @@ public class EventServiceIntegrationTest {
         subject.setId(subjectID);
 
         // Subscribe to event
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         EventFilterCreator filterCreator = EventFilterCreator.builder().eventType(new SubjectEvent().getType()).projectIds(Arrays.asList(projectId1)).status(SubjectEvent.Status.CREATED.name()).build();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
@@ -920,7 +920,7 @@ public class EventServiceIntegrationTest {
         }
         TestAction action = (TestAction) testAction;
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type SubjectEvent", action.getDetectedEvents().get(0).getType(), containsString("SubjectEvent"));
+        assertThat("Expected detected event to be of type SubjectEvent", action.getDetectedEvents().getFirst().getType(), containsString("SubjectEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
     }
 
@@ -935,7 +935,7 @@ public class EventServiceIntegrationTest {
         subject.setId(subjectID);
 
         // Subscribe to event
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         EventFilterCreator filterCreator = EventFilterCreator.builder().eventType(new SubjectEvent().getType()).projectIds(Arrays.asList(projectId1)).status(SubjectEvent.Status.CREATED.name()).build();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
@@ -958,7 +958,7 @@ public class EventServiceIntegrationTest {
         }
         TestAction action = (TestAction) testAction;
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type SubjectEvent", action.getDetectedEvents().get(0).getType(), containsString("SubjectEvent"));
+        assertThat("Expected detected event to be of type SubjectEvent", action.getDetectedEvents().getFirst().getType(), containsString("SubjectEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
 
     }
@@ -975,7 +975,7 @@ public class EventServiceIntegrationTest {
         subject.setId(subjectID);
 
         // Subscribe to event
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         EventFilterCreator filterCreator = EventFilterCreator.builder().eventType(new SubjectEvent().getType()).projectIds(Arrays.asList(projectId1)).status(SubjectEvent.Status.CREATED.name()).build();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
@@ -1011,7 +1011,7 @@ public class EventServiceIntegrationTest {
         session.setSessionType("xnat:imageSessionData");
 
         // Subscribe to event
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         EventFilterCreator filterCreator = EventFilterCreator.builder().eventType(new SessionEvent().getType()).projectIds(Arrays.asList(projectId1)).status(SubjectEvent.Status.CREATED.name()).build();
 
@@ -1035,7 +1035,7 @@ public class EventServiceIntegrationTest {
         }
         TestAction action = (TestAction) testAction;
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().get(0).getType(), containsString("SessionEvent"));
+        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().getFirst().getType(), containsString("SessionEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
     }
 
@@ -1056,7 +1056,7 @@ public class EventServiceIntegrationTest {
         Mockito.when(scan.getImageSessionData()).thenReturn(session);
 
         // Subscribe to event
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         EventFilterCreator filterCreator = EventFilterCreator.builder().eventType(new ScanEvent().getType()).projectIds(Arrays.asList(projectId1)).status(SubjectEvent.Status.CREATED.name()).build();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
@@ -1079,7 +1079,7 @@ public class EventServiceIntegrationTest {
         }
         TestAction action = (TestAction) testAction;
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type ScanEvent", action.getDetectedEvents().get(0).getType(), containsString("ScanEvent"));
+        assertThat("Expected detected event to be of type ScanEvent", action.getDetectedEvents().getFirst().getType(), containsString("ScanEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
     }
 
@@ -1114,7 +1114,7 @@ public class EventServiceIntegrationTest {
         sw2.stop();
         TestAction action = (TestAction) testAction;
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().get(0).getType(), containsString("SessionEvent"));
+        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().getFirst().getType(), containsString("SessionEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
         System.out.print("Event caught in : " + sw2.getTotalTimeSeconds() + "seconds\n");
 
@@ -1151,7 +1151,7 @@ public class EventServiceIntegrationTest {
         sw2.stop();
         TestAction action = (TestAction) testAction;
         assertThat("Expected two detected events.", action.getDetectedEvents().size(), is(2));
-        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().get(0).getType(), containsString("SessionEvent"));
+        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().getFirst().getType(), containsString("SessionEvent"));
         assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().get(1).getType(), containsString("SessionEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
         System.out.print("Two event caught in : " + sw2.getTotalTimeSeconds() + "seconds\n");
@@ -1360,7 +1360,7 @@ public class EventServiceIntegrationTest {
 
         TestAction action = (TestAction) testAction;
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().get(0).getType(), containsString("SessionEvent"));
+        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().getFirst().getType(), containsString("SessionEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
     }
 
@@ -1401,7 +1401,7 @@ public class EventServiceIntegrationTest {
 
         TestAction action = (TestAction) testAction;
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().get(0).getType(), containsString("SessionEvent"));
+        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().getFirst().getType(), containsString("SessionEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
     }
 
@@ -1452,7 +1452,7 @@ public class EventServiceIntegrationTest {
         }
 
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().get(0).getType(), containsString("SessionEvent"));
+        assertThat("Expected detected event to be of type SessionEvent", action.getDetectedEvents().getFirst().getType(), containsString("SessionEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
     }
 
@@ -1472,7 +1472,7 @@ public class EventServiceIntegrationTest {
         Mockito.when(scan.getImageSessionData()).thenReturn(session);
 
         // Subscribe to event
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         EventFilterCreator filterCreator = EventFilterCreator.builder().eventType(new ScanEvent().getType()).build();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
@@ -1496,7 +1496,7 @@ public class EventServiceIntegrationTest {
         }
         TestAction action = (TestAction) testAction;
         assertThat("Expected one detected event.", action.getDetectedEvents().size(), is(1));
-        assertThat("Expected detected event to be of type ScanEvent", action.getDetectedEvents().get(0).getType(), containsString("ScanEvent"));
+        assertThat("Expected detected event to be of type ScanEvent", action.getDetectedEvents().getFirst().getType(), containsString("ScanEvent"));
         assertThat("Expected Action User to be subscription creator", action.getActionUser(), is(mockUser.getLogin()));
     }
 
@@ -1518,7 +1518,7 @@ public class EventServiceIntegrationTest {
         Mockito.when(scan.getImageSessionData()).thenReturn(session);
 
         // Subscribe to event
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         ProjectEventFilterCreator filter = ProjectEventFilterCreator.builder().projectIds(Arrays.asList(projectId1)).eventType(eventType).status(status.name()).build();
         ProjectSubscriptionCreator subscriptionCreator = ProjectSubscriptionCreator.builder()
@@ -1561,7 +1561,7 @@ public class EventServiceIntegrationTest {
             filter = EventFilterCreator.builder().projectIds(Arrays.asList(projectId)).eventType(eventType).status(status.name()).build();
         }
 
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
                                                                      .name(name)
@@ -1581,7 +1581,7 @@ public class EventServiceIntegrationTest {
         if (filter == null) {
             filter = EventFilterCreator.builder().projectIds(Arrays.asList(projectId)).eventType(eventType).status(status.name()).build();
         }
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
                                                                      .name(name)
@@ -1602,7 +1602,7 @@ public class EventServiceIntegrationTest {
         if (filter == null) {
             filter = EventFilterCreator.builder().projectIds(Arrays.asList(projectId)).eventType(eventType).status(status.name()).build();
         }
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
                                                                      .name(name)
@@ -1622,7 +1622,7 @@ public class EventServiceIntegrationTest {
         if (filter == null) {
             filter = EventFilterCreator.builder().projectIds(Arrays.asList(projectId)).eventType(eventType).status(status.name()).build();
         }
-        String testActionKey = testAction.getAllActions().get(0).actionKey();
+        String testActionKey = testAction.getAllActions().getFirst().actionKey();
         eventService.getAllActions();
         SubscriptionCreator subscriptionCreator = SubscriptionCreator.builder()
                                                                      .name(name)
